--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 									<h3>Education</h3>
 									<h4>Undergraduate:</h4>
 									<p> <b>National Institute of Technology Tiruchirappalli</b> (2016 - 2020)</br> 
-										Majors in Instrumentation and Control Engineering, </br> </p>
+										Majors in Instrumentation and Control Engineering. </br> </p>
 									<h3>Experience</h3>
 									<p> <b>Robotics Engineer</b> (June 2020 - May 2021) </br> 
 										<a href="https://flytbase.com/">Flytbase, Pune</a> </br> 
