--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<header>
 					<span class="image avatar"><img src="images/dp.jpeg" alt="" /></span>
 					<h1 id="logo"><a href="#">Bharath Kumar</a></h1>
-					<p>A common man who loves to make robots intelligent<br />
+					<p>Roboticist<br />
 					</p>
 				</header>
 				<nav id="nav">
@@ -63,8 +63,8 @@
 										<!-- <p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p> -->
 										
 										<ul class="feature-icons">
-											<li class="icon solid fa-code">Mobile Robotics</li>
 											<li class="icon solid fa-code">Computer Vision</li>
+											<li class="icon solid fa-code">Motion Planning</li>
 											<li class="icon solid fa-code">SLAM</li>
 											<li class="icon solid fa-code">Bio Inspired Robotics</li>
 										</ul>
@@ -79,7 +79,7 @@
 											<li class="icon solid fa-code">ROS</li>
 											<li class="icon solid fa-code">Unity</li>
 											<li class="icon solid fa-code">Blender</li>
-											<li class="icon solid fa-code">Visual Studio Code</li>
+											<li class="icon solid fa-code">Gazebo</li>
 										</ul>	
 								</div>
 							</section>
@@ -94,7 +94,7 @@
 									<h3>Experience</h3>
 									<p> <b>Robotics Engineer</b> (June 2020 - May 2021) </br> 
 										<a href="https://flytbase.com/">Flytbase, Pune</a> </br> 
-										Worked on navigation, path planning and perception of drones in outdoor surveillance and warehouse applications.
+										Worked on perception, navigation and path planning modules for DJI drones in surveillance and warehouse applications.
 										</p>
 
 								</div>
@@ -104,7 +104,7 @@
 							<section id="three">
 								<div class="container">
 									<h3>Projects</h3>
-									<p>These projects were done as a part of robotics club at my undergraduate college, internships at Indian Institute of Technology Madras and Indian Institute of Science.</p>
+									<p>These projects were done as a part of robotics club at my undergraduate Institute and research internships at Indian Institute of Technology Madras and Indian Institute of Science.</p>
 									<div class="features">
 										<article>
 											<a href="#" class="image"><img src="images/shadow.png" alt="" /></a>
@@ -120,27 +120,38 @@
 											<a href="#" class="image"><img src="images/agri.jpeg" alt="" /></a>
 											<div class="inner">
 												<h4>Indoor Agricultural Robot</h4>
-												<p>A mobile robot that autonomously travels indoor environment with laser SLAM using Kinect. Plowing, Sowing and Spraying mechanisms were built. A mobile app is developed to give appropriate commands to the robot.</p>
+												<p>A mobile robot that autonomously travels indoor environment with laser SLAM using Kinect. Plowing, Sowing and Spraying mechanisms were built. A mobile application is developed for monitoring and control of the robot.</p>
 												<ul class="actions special">
 													<li><a href="https://github.com/cdbharath/agriX" class="button">Github</a></li>
+												</ul>
+											</div>
+										</article>
+
+										<article>
+											<a href="#" class="image"><img src="images/smc_new.png" alt="" /></a>
+											<div class="inner">
+												<h4>Super Twisting Sliding Mode Control of a Fault Tolerant Quadrotor</h4>
+												<p> Designed a SMC STW controller for a quadrotor to land safely when any of the rotor fails. A control allocation algorithm is implemented to accomodate a PID-SMC hybrid control system. A simulation is created and experimented in Maltab and Simulink.</p>
+												<ul class="actions special">
+													<li><a href="https://github.com/cdbharath/super-twisting-SMC-quad" class="button">Github</a></li>
 												</ul>
 											</div>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/cerebro.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Brain Controlled Robotic Hand</h4>
-												<p>A robotic hand actuated with string mechanism is controlled using motor imagery signals. A simulation of a 4DOF arm is created using gazebo and moveit. Motor imagery, EEG signals are used for controlling the position of the robot's end effector. (Incomplete) </p>
+												<h4>Simulation of Robotic Arm Manipulation with EEG</h4>
+												<p>A robotic hand actuated with string mechanism is controlled using motor imagery signals. A simulation of a 4DOF arm is created using gazebo and moveit. EEG signals are used for controlling the position of the robot's end effector. </p>
 												<ul class="actions special">
 													<li><a href="https://github.com/cdbharath/cerebro" class="button">Github</a></li>
 												</ul>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/impedance.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/exo.png" alt="" /></a>
 											<div class="inner">
-												<h4>Impedance Control of a 2DOF Arm</h4>
-												<p>Impedance control algorithm is designed to control a 2DOF robotic arm for improved compliance of the arm, when coming in contact with humans.</p>
+												<h4>Impedance Control of a 2DOF Exoskeleton Arm</h4>
+												<p>The exoskeleton arm is modelled using DH convention. Impedance control algorithm is designed to control a 2DOF exoskeleton arm for improved compliance. A simulation is created and experimented in Matlab.</p>
 												<ul class="actions special">
 													<li><a href="https://github.com/cdbharath/impedance-control-exoskeleton" class="button">Github</a></li>
 												</ul>
@@ -150,7 +161,7 @@
 											<a href="#" class="image"><img src="images/SDC.png" alt="" /></a>
 											<div class="inner">
 												<h4>Self Driving Mobile Robot</h4>
-												<p>A differential bot is designed to drive through lanes with path segmentation and PID control.</p>
+												<p>A differential robot with Raspberry PI and Picamera mount is built. Otsu's binarization is used to segment the path. A PID algorithm is designed to control the movement of the bot along the segmented lane. </p>
 												<ul class="actions special">
 													<li><a href="https://github.com/cdbharath/self-driving-car" class="button">Github</a></li>
 												</ul>
