changed about me

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 										<!-- <p>Just an incredibly simple responsive site<br />
 										template freebie by .</p> -->
 									</header>
-									<p>I am a passionate robotics enthusiast, constantly thriving to learn and experiment with new technologies. My primary interest involve developing vision, control and navigation algorithms for robotic applications. Besides robotics, I also have an interest in developing games and AI applications. I play chess and read fictions during my free time. </p>
+									<p>I am a passionate robotics enthusiast, constantly thriving to learn and experiment with new technologies. My primary interest involve developing vision, control and navigation algorithms for robotic applications. Besides robotics, I also have a keen interest in developing games and AI applications. </br>I play chess and read fictions during my free time. </p>
 									<h3>Areas of Interest</h3>
 										<!-- <p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p> -->
 										
@@ -103,12 +103,12 @@
 										</p>
 									<h4>Internship Experience:</h4>
 									<p> <b>Robotics Research Intern</b> (May 2018 - June 2018) </br> 
-										<a>Flytbase, Pune</a> </br> 
-										Worked on perception, navigation and path planning modules for DJI drones in surveillance and warehouse applications.
+										<a>Prof. Suresh Sundaram, Artificial Intelligence and Robotics Laboratory, Indian Institute of Science</a> </br> 
+										Worked on developing super twisting sliding mode control for fault tolerant control of a quadrotor.
 										</p>
-									<p> <b>BCI Research Intern</b> (May 2019 - July 2019) </br> 
-										<a>Flytbase, Pune</a> </br> 
-										Worked on perception, navigation and path planning modules for DJI drones in surveillance and warehouse applications.
+									<p> <b>Brain Computer Interaface Research Intern</b> (May 2019 - July 2019) </br> 
+										<a>Prof. Ramasubba Reddy, Biomedical and Instrumentation Lab, Indian Institute of Technology Madras</a> </br> 
+										Worked on control of medical assistive devices using EOG.
 										</p>
 									
 								</div>
