changed about me

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 										<!-- <p>Just an incredibly simple responsive site<br />
 										template freebie by .</p> -->
 									</header>
-									<p>I am a passionate robotics enthusiast, constantly thriving to learn and experiment with new technologies. My primary interest involve developing vision, control and navigation algorithms for robotic applications. Besides robotics, I also have a keen interest in developing games and AI applications. </br>I play chess and read fictions during my free time. </p>
+									<p>I am a passionate robotics enthusiast, constantly thriving to learn and experiment with new technologies. My primary interest involve developing vision, control and navigation algorithms for robotic applications. Besides robotics, I also have a keen interest in developing games and AI applications. I play chess and read fictions during my free time. </p>
 									<h3>Areas of Interest</h3>
 										<!-- <p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p> -->
 										
