changed about me

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 										</p>
 									<p> <b>Brain Computer Interaface Research Intern</b> (May 2019 - July 2019) </br> 
 										<a>Prof. Ramasubba Reddy, Biomedical and Instrumentation Lab, Indian Institute of Technology Madras</a> </br> 
-										Worked on developing hardware and algorithm for control of medical assistive devices using EOG signals.
+										Worked on developing hardware and algorithm for control of medical assistive devices using EOG.
 										</p>
 									
 								</div>
