--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 								</div>
 								<div class="container">
 									<header class="major">
-										<h3>About Me</h3>
+										<h3 style="color:MediumSeaGreen">About Me</h3>
 										<!-- <p>Just an incredibly simple responsive site<br />
 										template freebie by .</p> -->
 									</header>
