change of color again

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 								</div>
 								<div class="container">
 									<header class="major">
-										<h3 style="color:MediumSeaGreen">About Me</h3>
+										<h3 style="color:#40E0D0">About Me</h3>
 										<!-- <p>Just an incredibly simple responsive site<br />
 										template freebie by .</p> -->
 									</header>
@@ -87,7 +87,7 @@
 							<section id="two">
 								<div class="container">
 									<header class="major">
-									<h3 style="color:MediumSeaGreen">Education</h3>
+									<h3 style="color:#40E0D0">Education</h3>
 									<!-- <p>Just an incredibly simple responsive site<br />
 									template freebie by .</p> -->
 									</header>
@@ -126,7 +126,7 @@
 						<!-- Three -->
 							<section id="three">
 								<div class="container">
-									<h3 style="color:MediumSeaGreen">Projects</h3>
+									<h3 style="color:#40E0D0">Projects</h3>
 									<!-- <p>Just an incredibly simple responsive site<br />
 									template freebie by .</p> -->
 									</header>
@@ -203,7 +203,7 @@
 						<!-- Four -->
 							<section id="four">
 								<div class="container">
-									<h3 style="color:MediumSeaGreen">Contact Me</h3>
+									<h3 style="color:#40E0D0">Contact Me</h3>
 									<!-- <p>Just an incredibly simple responsive site<br />
 									template freebie by .</p> -->
 									</header>
