--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 								</div>
 								<div class="container">
 									<header class="major">
-										<h3 style="color:#82E0AA">About Me</h3>
+										<h3 style="color:#78CD9C ">About Me</h3>
 										<!-- <p>Just an incredibly simple responsive site<br />
 										template freebie by .</p> -->
 									</header>
@@ -87,7 +87,7 @@
 							<section id="two">
 								<div class="container">
 									<header class="major">
-									<h3 style="color:#82E0AA">Education</h3>
+									<h3 style="color:#78CD9C ">Education</h3>
 									<!-- <p>Just an incredibly simple responsive site<br />
 									template freebie by .</p> -->
 									</header>
@@ -100,7 +100,7 @@
 										<p> <b>Worcester Polytechnic Institute</b> (2021 - 2023)</br> 
 										Masters in Robotics Engineering. </p>
 									
-									<h3 style="color:#82E0AA">Experience</h3>
+									<h3 style="color:#78CD9C ">Experience</h3>
 									<!-- <p>Just an incredibly simple responsive site<br />
 									template freebie by .</p> -->
 									</header>
@@ -126,7 +126,7 @@
 						<!-- Three -->
 							<section id="three">
 								<div class="container">
-									<h3 style="color:#82E0AA">Projects</h3>
+									<h3 style="color:#78CD9C ">Projects</h3>
 									<!-- <p>Just an incredibly simple responsive site<br />
 									template freebie by .</p> -->
 									</header>
@@ -203,7 +203,7 @@
 						<!-- Four -->
 							<section id="four">
 								<div class="container">
-									<h3 style="color:#82E0AA">Contact Me</h3>
+									<h3 style="color:#78CD9C ">Contact Me</h3>
 									<!-- <p>Just an incredibly simple responsive site<br />
 									template freebie by .</p> -->
 									</header>
