--- a/index.html
+++ b/index.html
@@ -62,10 +62,11 @@
 										<!-- <p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p> -->
 										
 										<ul class="feature-icons">
-											<li class="icon solid fa-code">Computer Vision</li>
+											<li class="icon solid fa-code">Perception</li>
 											<li class="icon solid fa-code">Motion Planning</li>
-											<li class="icon solid fa-code">SLAM</li>
+											<li class="icon solid fa-code">Control</li>
 											<li class="icon solid fa-code">Mobile Robots</li>
+											<li class="icon solid fa-code">Manipulators</li>
 										</ul>
 
 									<h4>Skills</h4>
@@ -173,7 +174,7 @@
 										<article>
 											<a href="#" class="image"><img src="images/cerebro.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Simulation of EEG controlled Robotic Arm Manipulation</h4>
+												<h4>EEG controlled Robotic Arm Manipulation</h4>
 												<p style="text-align:justify;">Designed a 4-DOF pick and place manipulator and simulated in Gazebo. Implemented end effector
 													path planing and control using MoveIt ROS package.
 													Designed CNN classifier for the classification of Motor imagery and EOG signals from OpenBCI ganglion.
@@ -221,8 +222,8 @@
 									</header>
 									<p> <b>Personal Mail</b>: kumar7bharath@gmail.com </br> 
 										<b>Institute Mail</b>: brameshbabu@wpi.edu </br>
-										<b>US Phone</b>: +1 (774) 701-8216 </br>
-										<b>Indian Phone</b>: +91 8015391159 </br>
+										<!-- <b>US Phone</b>: +1 (774) 701-8216 </br>
+										<b>Indian Phone</b>: +91 8015391159 </br> -->
 									</p>
 									
 
