--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
 								<div class="job">
 									<img src="images/logos/flyt.jpeg" alt="Flyt Logo" class="logo">
 									<div class="job-description">
-										<p style="text-align:left;"> <br> <b>Robotics Engineer </b>,  
+										<p style="text-align:left;"> <br> <b>Robotics Intern </b>,  
 											<a href="https://flytbase.com/" target="_blank">Flytbase</a>, India (May 2020 - July 2021) </br> 
 											Engineered a simulator based on Microsoft AirSim for drone navigation and perception in warehouse setting.
 											</p>				
