--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 													<p style="text-align:left;">Implemented various graph and sampling-based motion planning algorithms (RRT, RRT*, Informed RRT*, PRM, D*,
 														A*, Djikstra) and performed a comparative analysis.</p>
 													<ul class="actions special">
-														<li><a href="https://github.com/cdbharath" target="_blank" class="icon brands fa-github">Github</a></li>
+														<li><a href="https://github.com/cdbharath/path_planning_primer" target="_blank" class="icon brands fa-github">Github</a></li>
 													</ul>
 												</div>
 											</article>
