--- a/index.html
+++ b/index.html
@@ -188,6 +188,19 @@
 											</div>
 										</article>
 
+										<article>
+											<a class="image"><img src="images/sparse_reconstruction.gif" style="width:90%; padding-left:50px;" alt="" />
+											</a>
+											
+											<div class="inner">
+												<h4> 3D reconstructon and SFM from Scratch </h4>
+												<p style="text-align:left;">Implemented sparse 3D reconstructon and structure from motion from scratch.</p>
+												<ul class="actions special">
+													<li><a href="https://github.com/cdbharath/mvg" target="_blank" class="icon brands fa-github">Github</a></li>
+												</ul>
+											</div>
+										</article>
+
 											<article>
 												<a class="image"><img src="images/motion.jpg" alt="" />
 												</a>
