--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 											</a>
 											
 											<div class="inner">
-												<h4> 3D reconstructon and SFM from Scratch </h4>
+												<h4> 3D reconstruction and SFM from Scratch </h4>
 												<p style="text-align:left;">Implemented sparse 3D reconstructon and structure from motion from scratch.</p>
 												<ul class="actions special">
 													<li><a href="https://github.com/cdbharath/mvg" target="_blank" class="icon brands fa-github">Github</a></li>
