--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 											<a class="image"><img src="images/pointnet.gif" alt="" style="width:100%;" /></a>
 
 											<div class="inner">
-												<h4>Lidar Odometry Estimation using PointNet and Spherical Projection Correspondances</h4>
+												<h4>Lidar Odometry Estimation using PointNet and Spherical Projection Correspondance</h4>
 												<p style="text-align:left">Developed a learning-based odometry regression algorithm utilizing KITTI lidar dataset. Built a PointNet based architecture for dynamic object filtering and pose estimation.
 												</p>													
 												<ul class="actions special">
