--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 											</article>
 		
 											<article>
-												<a class="image"><img src="images/pose_estimation.gif" alt="" />
+												<a class="image"><img src="images/cube.jpg" alt="" />
 												</a>
 												
 												<div class="inner">
