added sfm images

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 												</div>
 											</article>
 
-											<article>
+											<!-- <article>
 												<a class="image"><img src="images/mapping.gif" alt="" /></a>
 	
 												<div class="inner">
@@ -145,8 +145,20 @@
 													</ul>
 												</div>
 	
+											</article> -->
+											<article>
+												<a class="image"><img src="images/sfm1.jpg" style="width:100%; padding-left:0px;" alt="" />
+												</a>
+												
+												<div class="inner">
+													<h4> 3D Reconstruction and Structure From Motion using Oxford Multi-View Dataset </h4>
+													<p style="text-align:left;">Implemented sparse 3D reconstruction and structure from motion from scratch with Oxford Multi-View Dataset.</p>
+													<ul class="actions special">
+														<li><a href="https://github.com/cdbharath/mvg" target="_blank" class="icon brands fa-github">Github</a></li>
+													</ul>
+												</div>
 											</article>
-		
+			
 											<article>
 												<a class="image"><img src="images/cube.jpg" alt="" />
 												</a>
@@ -170,19 +182,6 @@
 													Removed shadows by transferring illuminance across segmented subregions.</p>
 												<ul class="actions special">
 													<li><a href="https://github.com/cdbharath/shadow_detection_and_removal" target="_blank" class="icon brands fa-github">Github</a></li>
-												</ul>
-											</div>
-										</article>
-
-										<article>
-											<a class="image"><img src="images/sparse_reconstruction.gif" style="width:90%; padding-left:50px;" alt="" />
-											</a>
-											
-											<div class="inner">
-												<h4> 3D Reconstruction and Structure From Motion using Oxford Multi-View Data </h4>
-												<p style="text-align:left;">Implemented sparse 3D reconstructon and structure from motion from scratch using Oxford Multi-View Data.</p>
-												<ul class="actions special">
-													<li><a href="https://github.com/cdbharath/mvg" target="_blank" class="icon brands fa-github">Github</a></li>
 												</ul>
 											</div>
 										</article>
